[package]
name = "cesspool"
version = "0.1.0"
authors = ["Mariusz Bialonczyk <manio@skyboo.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# This is necessary in order for WIFI to work
[profile.dev.package.esp-wifi]
opt-level = 3
[profile.release]
opt-level = 3
lto="off"

[dependencies]
embassy-executor  = { version = "0.2.1", features = ["nightly", "integrated-timers", "arch-xtensa", "executor-thread"] }
static_cell       = "1.1.0"
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", features=["esp32", "embassy-net", "embedded-svc", "wifi"] }
embassy-time       = { version = "0.1.2",  features = ["nightly", "tick-hz-1_000_000"] }
embassy-net = { version = "0.1.0", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
hal = { package = "esp32-hal", path = "../esp-hal/esp32-hal", features = ["embassy", "embassy-time-timg0", "async"] }
esp-backtrace = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32", "log"] }
embedded-svc = { version = "0.25.3", default-features = false }
embedded-hal-async = { version = "=0.2.0-alpha.2"}
log = "0.4.16"
embedded-io = "0.4.0"
format_no_std = "1.0.0"
toml-cfg = "0.1.3"

[patch.crates-io]
esp-hal-common = {  path = "../esp-hal/esp-hal-common" }
#esp32-hal = {  git = "https://github.com/esp-rs/esp-hal" }
#esp32 = { git = "https://github.com/esp-rs/esp-pacs", rev = "ce6d5b5" }
